# ENest

./: .gitignore  README.md  package-lock.json  package.json
NewENest/: README.md  docker-compose.yml  go.mod  开发文档.md  模型设计文档.md  设计文档.md
go-server/: API.md  estudyroom.bat  estudyroom.sh  go.mod  go.sum  install.sh  main.go
proto/: message.proto
scripts/: generateProto.js
win_zoom/windows/: CMakeLists.txt  MainZoom.cpp  ZoomVideoSDKMgr.cpp  win_zoom_plugin.cpp  win_zoom_plugin.h  win_zoom_plugin_c_api.cpp
win_zoom/windows/include/: zoom_video_sdk_api.h  zoom_video_sdk_chat_message_interface.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_session_info_interface.h
win_zoom/windows/include/helpers/: zoom_video_sdk_annotation_helper_interface.h  zoom_video_sdk_audio_helper_interface.h  zoom_video_sdk_audio_setting_interface.h  zoom_video_sdk_cmd_channel_interface.h  zoom_video_sdk_crc_helper_interface.h  zoom_video_sdk_livestream_helper_interface.h  zoom_video_sdk_livetranscription_helper_interface.h  zoom_video_sdk_network_connection_helper_interface.h  zoom_video_sdk_phone_helper_interface.h  zoom_video_sdk_share_helper_interface.h  zoom_video_sdk_share_setting_interface.h  zoom_video_sdk_user_helper_interface.h  zoom_video_sdk_video_helper_interface.h
win_zoom/windows/include/win_zoom/: MainZoom.h  ZoomVideoSDKMgr.h  win_zoom_plugin_c_api.h
win_zoom/windows/include/zoom/: zoom_video_sdk_def.h  zoom_video_sdk_delegate_interface.h  zoom_video_sdk_interface.h
win_zoom/windows/lib/: videosdk.lib
win_zoom/windows/test/: win_zoom_plugin_test.cpp
(+160 files in other folders)
